[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrympro"
dynamic = ["version"]
description = "A python library to communicate with Read Your Meter Pro (https://rym-pro.com/)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "On Freund", email = "onfreund@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/OnFreund/pyrympro"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["pyrympro*"]

[tool.setuptools.package-data]
pyrympro = ["py.typed"]

[tool.setuptools_scm]
# version derived from git tags (e.g. v0.0.9 -> 0.0.9)

[tool.mypy]
python_version = "3.10"
disallow_any_decorated = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
